Fix typo in data deletion

--- a/public/data-deletion.html
+++ b/public/data-deletion.html
@@ -13,7 +13,7 @@
     <h3>1.1 Backup Data</h3>
     After uploading 3 backups your first backup is automatically deleted. If you want to delete all of your backups, please contact us using the <a href="https://www.eliaschenker.com/ET_App/#feedback">contact form</a>.
     <h3>1.3 Leaderboard Data</h3>
-    If you have registered to the leaderboard you can delete your entry/data anytime by clicking on the trashs symbol on the leaderboard page.
+    If you have registered to the leaderboard you can delete your entry/data anytime by clicking on the trash symbol on the leaderboard page.
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/languageloader.js"></script>
